[project]
name = "expense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.135.3",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.2",
]
